syntax = "proto3";

option go_package="./pb";

package pb;

message LoginResquest{
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}

service AuthService{
    rpc Login(LoginResquest) returns (LoginResponse){};
}